# 3DCubeGen

./: README.md  pyproject.toml  setup.py
3DCubeGen/common/: constants.py
3DCubeGen/tools/: kernel.py  tools.py
Configfiles/: config.yml  config_pipecube.yml  config_pipemap.yml  config_sincube.yml  config_sinmap.yml
CubeGen/common/: constants.py
CubeGen/daptools/: dap_fluxelines.py  rss_gen.py
CubeGen/tools/: cubegen.py  deconvolve.py  images.py  kernel.py  mapgen.py  matrixgen.py  merge_cube.py  tools.py
Examples/: Cube_gen-lcopy.ipynb  NGC5128  NGC55
Examples/.ipynb_checkpoints/: Cube_gen-lcopy-checkpoint.ipynb
docs/: conf.py  index.rst
