[build-system]
requires = [
  "setuptools>=42",
  "wheel"]
#  "setuptools_scm[toml]>=6.2"
#]
build-backend = "setuptools.build_meta"

[project]
name = "3DCubeGen"
#dynamic = ["version"]
#version = "0.2.0.dev0"
description = "A Python implementation for a 3D RSS to cube reconstruction"
license = {text = "MIT"}
authors = [
  { name="Hector Javier Ibarra Medel", email="hibarram@astro.unam.mx" }
]
keywords = ["galaxies"]
classifiers = [
  "Development Status :: 1 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.8"

dependencies = [
  "astropy",
  "matplotlib",
  "numpy",
  "scipy",
  "sdeconv",
  "tqdm",
  "pyyaml",
  "click",
  "cloup"
]

#[project.scripts]
#3dcubegen = "bin.3dcubegen"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["legacy/*", "legacy/**/*"]

#[tool.setuptools_scm]
#version_file = "CubeGen/common/_version.py"